Sun Jun 19 20:18:50 2005  Ming Xiong  <mxiong@tango.dre.vanderbilt.edu>

        * NEWS:

          Updated NEWS on upcoming support for Component Packaging

Thu Jun 16 21:46:10 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DAnCE/examples/Display/descriptors/Modified_Deployment.xsd
        * DAnCE/examples/Quoter/descriptors/Modified_Deployment.xsd
        * docs/schema/Modified_Deployment.xsd

          Modified the <InstanceDeploymentDescription> element type
          to allow having unbounded number of <configProperty> elements.
          Thanks Will Chai <willchai@126.com> to report this problem.

Wed Jun 15 14:46:00 2005  Gautam Thaker  <gthaker@atl.lmco.com>

        * DAnCE/examples/Hello/step-by-step.html:

          Fixed a typo regarding name of script "run_NodeDaemons.pl" and
          one other sentence fragement.

Mon Jun 13 13:44:41 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/tests/NodeApplicationTest/run_test_simple.pl:
        * DAnCE/tests/NodeApplicationTest/run_test.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:

          Fixed a typo.

Thu Jun  4 14:36:00 UTC 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * DAnCE/examples/Quoter/Distributor/Distributor_exec.h
        * DAnCE/examples/Quoter/Distributor/Distributor_exec.cpp

          Fixed a virtual hiding warning reported on WinXP_BCB6_Pro_Dynamic_Debug

Thu Jun  9 09:31:28 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with late release note submissions.

Wed Jun 08 08:50:35 2005  Simon McQueen  <sm@prismtech.com>

        * CIAO version 0.4.6 released.

Wed Jun  8 11:21:50 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with release note entries.

Mon Jun  6 12:33:16 2005  Simon McQueen  <sm@prismtech.com>

        * DAnCE/examples/Display/GPS/GPS.mpc:

          Added HUDisplay_DnC_svnt to after tag for project GPS_DnC_svnt
          to fix build error on BCB 6 dynamic build.

