@@ -52,6 +52,7 @@ public:
   virtual int visit_module (AST_Module *node);
   virtual int visit_interface (AST_Interface *node);
   virtual int visit_interface_fwd (AST_InterfaceFwd *node);
+  virtual int visit_valuebox (AST_ValueBox *node);
   virtual int visit_valuetype (AST_ValueType *node);
   virtual int visit_valuetype_fwd (AST_ValueTypeFwd *node);
   virtual int visit_component (AST_Component *node);
